--- a/GZDoomIDE/GZDoomIDE.csproj
+++ b/GZDoomIDE/GZDoomIDE.csproj
@@ -50,6 +50,9 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib.Portable, Version=0.86.0.51803, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.Portable.0.86.0.0003\lib\portable-net45+netcore45+wp8+win8+wpa81+MonoTouch+MonoAndroid+Xamarin.iOS10\ICSharpCode.SharpZipLib.Portable.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -77,11 +80,13 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="Data\ErrorProvider.cs" />
+    <Compile Include="Data\ProjectTemplate.cs" />
     <Compile Include="Data\SemVer.cs" />
     <Compile Include="Freedesktop.Xdg\BaseDirectory.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Plugin\PluginManager.cs" />
     <Compile Include="ProgramData.cs" />
+    <Compile Include="Data\FilePointer.cs" />
     <Compile Include="Windows\AboutBox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -186,6 +191,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Support\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
