--- a/GZDoomIDE/packages.config
+++ b/GZDoomIDE/packages.config
@@ -5,4 +5,5 @@
   <package id="Freedesktop.Xdg.BaseDirectory.Sources" version="1.1.0" targetFramework="net45" />
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
+  <package id="SharpZipLib.Portable" version="0.86.0.0003" targetFramework="net45" />
 </packages>
