--- a/CorePlugin/CorePlugin.csproj
+++ b/CorePlugin/CorePlugin.csproj
@@ -153,6 +153,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ZScript\Parsing.cs" />
     <Compile Include="ZScript\SyntaxHighlighter.cs" />
   </ItemGroup>
   <ItemGroup>
